feat: add basic authen middleware to admin endpoint
