# internal/handlers/admin/admin.go
@@ -2,6 +2,7 @@ package admin
 
 import (
 	"github.com/ztrixack/assessment-tax/internal/modules/api"
+	"github.com/ztrixack/assessment-tax/internal/modules/api/middlewares"
 	"github.com/ztrixack/assessment-tax/internal/modules/logger"
 	"github.com/ztrixack/assessment-tax/internal/services/admin"
 )
@@ -18,5 +19,5 @@ func New(log logger.Logger, e api.API, admin admin.Servicer) *handler {
 }
 
 func (h handler) setupRoutes(r api.Router) {
-	r.POST("/admin/deductions/personal", h.DeductionsPersonal)
+	r.POST("/admin/deductions/personal", h.DeductionsPersonal, middlewares.BasicAuth(h.log))
 }
